--- a/ui/package.json
+++ b/ui/package.json
@@ -64,6 +64,7 @@
     "ember-concurrency-ts": "^0.2.0",
     "ember-export-application-global": "^2.0.1",
     "ember-fetch": "^8.0.1",
+    "ember-in-viewport": "^3.8.0",
     "ember-inflector": "^3.0.1",
     "ember-inline-svg": "^1.0.0",
     "ember-intl": "^5.3.1",
